Kubernetes/donator-market/backend/manager/ingress-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: manager.com
    http:
      paths:
      - path: /manager
        pathType: Prefix
        backend:
          service:
            name: manager
            port:
              number: 8080
